# qzman

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  def.h.in  main.cpp  res.qrc
src/files/: appicon.icns
src/inc/aqp/: aqp.cpp  aqp.hpp
